Add test cases, archiver etc (LOTS OF CHANGES)
